# rbrc

./: .gitignore  Cargo.toml  Readme.md  rustfmt.toml  setup.sh
benches/: rbrc_benchmarks.rs
src/: lib.rs  main.rs
