[package]
name = "rbrc_calc"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.29"
memmap2 = "0.9.10"
pretty_env_logger = "0.5.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
env_logger = "0.11.10"

[[bench]]
name = "rbrc_benchmarks"
harness = false

[lib]
bench = false

[[bin]]
name = "rbrc_calc"
path = "src/main.rs"
bench = false

[profile.release]
debug = 0
